Ability to Draw
introduced one bug, the more you draw on a singe block though it's
visually not different it adds to the cells array still. needs a fix.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<p>HTML5 / Canvas / Javascript experiment that demonstrates <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life" rel="nofollow" title="Conway's Game of Life"> Conway's Game of Life</a>. <p>
 
 	<h2>Directions:</h2>
-	<p>Press 's' to start / pause</p>
-	<p>Want to see more? Look in the source </p>
+	<p>Press 's' to start / pause. <br /> Press 'd' to draw (in draw mode click and drag to draw)</p>
+	<p>Want to see more shapes? Look in the source!</p>
 	<h2>More Information:</h2>
 	<p>There are four rules that each pixel must obey. (Source: Wikipedia)</p>
 	<ol>
@@ -19,5 +19,7 @@
 		<li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li>
 		<li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
 	</ol>
-</body>
+
+<!-- 	<a href="https://github.com/JAStanton/conways-game-of-life"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+ --></body>
 </html>
