--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 		<li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
 	</ol>
 
-<!-- 	<a href="https://github.com/JAStanton/conways-game-of-life"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
- --></body>
+ 	<a href="https://github.com/JAStanton/conways-game-of-life"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+</body>
 </html>
